--- a/style.css
+++ b/style.css
@@ -1,3 +1,82 @@
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+:focus,
+:active {
+  outline: none;
+}
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+button {
+  cursor: pointer;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+ul li {
+  list-style: none;
+}
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -7,59 +86,94 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
-/*Ссылки*/
-.li-item {
-  text-decoration: none;
-  padding: 0 15px;
-  font-size: 15px;
-  color: white;
+/*---------------------------------------------------------------------------------------------------------------------------------*/
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
 }
-/*Список*/
-.ul-class {
-  display: flex;
-  list-style: none;
-}
-/*div в голове*/
-.color {
+
+/*ОФОРМЛЕНИЕ ШАПКИ*/
+.header__view {
   background-color: rgb(91, 117, 93);
-  height: 50px;
+}
+
+.nav__list {
+  min-height: 50px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  flex-wrap: wrap;
 }
-/*Блок инфы*/
+
+.nav__item {
+  margin: 0px 40px 0px 0px;
+}
+
+.nav-links {
+  text-decoration: none;
+  color: beige;
+}
+
+@media (max-width: 767px) {
+  .nav__item {
+    font-size: 10px;
+    margin: 0px 20px 0px 0px;
+  }
+}
+@media (max-width: 320px) {
+  .nav__item {
+    font-size: 8px;
+    margin: 0 10px 0 0;
+  }
+  .nav__list {
+    min-height: 20px;
+  }
+}
+
+/*-----------------------------------------------Блок аватара-------------------------------------------------------------------------------------*/
 .title {
-  font: 20px Roboto, sans-serif;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
 }
-/*Мое фото*/
-.avatar {
-  margin: 35px 50px 30px 0;
-}
-/*ФИО*/
+
 .name {
-  margin-top: 90px;
+  height: min-content;
+}
+
+.FIO {
+  text-align: center;
 }
 
 .line {
   width: 60px;
   height: 2px;
   background-color: black;
-  margin-left: 93px;
+  margin: 10px auto;
 }
+
+@media (max-width: 767px) {
+  .name {
+    font-size: 10px;
+  }
+}
+
+/*----------------------------------------------------------------------------------------------------------------------------*/
 
 .line_2 {
   height: 25px;
   background-color: rgb(91 117 93 / 27%);
+  margin: 30px 0;
 }
 
 .underline {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 #padding {
   margin-left: 40px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 li {
@@ -69,52 +183,57 @@ li {
 .first-box {
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
 }
 
 .block1 {
   width: 30%;
+  line-height: normal;
 }
 
 .block2 {
   width: 30%;
+  line-height: normal;
 }
 
 .line3 {
   height: 10px;
   background-color: rgb(91 117 93 / 27%);
+  margin: 30px 0;
 }
 
 .second-box {
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
 }
 
 .block3 {
   width: 30%;
+  line-height: normal;
 }
 
 .block4 {
   width: 30%;
+  line-height: normal;
 }
 
 .third-box {
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
 }
 
 .block5 {
   width: 30%;
+  line-height: normal;
 }
 
 .block6 {
   width: 30%;
+  line-height: normal;
 }
 
 .footer {
   background-color: rgb(91, 117, 93);
   display: flex;
   justify-content: space-around;
+  margin: 30px 0 2px 0;
 }
