--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
 
 /*ОФОРМЛЕНИЕ ШАПКИ*/
 .header__view {
-  background-color: rgb(91, 117, 93);
+  background-color: rgb(75, 107, 69);
 }
 
 .nav__list {
@@ -233,7 +233,11 @@ li {
 
 .footer {
   background-color: rgb(91, 117, 93);
+  margin-top: 10px;
+}
+
+.footer__container {
   display: flex;
   justify-content: space-around;
-  margin: 30px 0 2px 0;
+  margin: 15px 0 15px 0;
 }
